@@ -38,6 +38,7 @@
 #define	SFX_SHOT_BOOM	16		/* shot exploded */
 #define SFX_KILL_TEAM	17		/* shot a teammate */
 #define SFX_PHANTOM	18		/* Went into Phantom zone */
+#define SFX_MISSILE	19		/* guided missile fired */
 
 /* prepare sound effects generator and shut it down */
 void			openSound(const char* pname);
